# Hololang-v0.0.0-test-with-errors-

./: CMakeLists.txt  README.md
Hololang/src/: DateTimeUtils.cpp  DateTimeUtils.h  Key.cpp  Key.h  OstreamSupport.cpp  OstreamSupport.h  ShellExec.cpp  ShellExec.h  ShellIntrinsics.cpp  ShellIntrinsics.h  main.cpp
Hololang/src/Hololang/: Dictionary.cpp  Dictionary.h  HololangErrors.h  HololangInterpreter.cpp  HololangInterpreter.h  HololangIntrinsics.cpp  HololangIntrinsics.h  HololangKeywords.cpp  HololangKeywords.h  HololangLexer.cpp  HololangLexer.h  HololangParser.cpp  HololangParser.h  HololangTAC.cpp  HololangTAC.h  HololangTypes.cpp  HololangTypes.h  List.cpp  List.h  QA.cpp  QA.h  RefCountedStorage.h  SimpleString.cpp  SimpleString.h  SimpleVector.cpp  SimpleVector.h  SplitJoin.cpp  SplitJoin.h  UnicodeUtil.cpp  UnicodeUtil.h  UnitTest.cpp  UnitTest.h
Hololang/src/editline/: complete.c  config.h  editline.c  editline.h  editline_internal.h  sysunix.c  unix.h
lib/: bmfonts.holos  datetime.holos  events.holos  gfrnt.holos  importutils.holos  listutils.holos  maputil.holos  mathutils.holos  matrisutil.holos  qa.holos  sounds.holos  stringutils.holos  textutils.holos  tsv.holos  vt.holos
tests/: classobjecttest.holo  countdown.holo  daylighttest.holo  dogYears.holo  fizzbuzz.holo  functest.holo  lists.holo  maptest.holo  maxtest.holo  numbers.holo  string.holo  textAdventure.holo  therapist.holo  vartest.holo
